--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,8 @@ yaml-cpp.pc
 
 # opencv
 /3rdparty/opencv/*
+!/3rdparty/opencv/opencv410/build/x64/vc16/bin/opencv_world4100.dll
+!/3rdparty/opencv/opencv410/build/x64/vc16/lib/opencv_world4100.lib
 
 # llvm
 /3rdparty/llvm/llvm_build
