--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -68,6 +68,7 @@ target_sources(rpcs3
     rpcs3_version.cpp
     stb_image.cpp
     stdafx.cpp
+    rpcn_countries.cpp
 
     Input/basic_keyboard_handler.cpp
     Input/basic_mouse_handler.cpp
