Fixed Cmake path

--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -65,7 +65,6 @@ target_sources(rpcs3
     main.cpp
     main_application.cpp
     module_verifier.cpp
-    rpcn_countries.cpp
     rpcs3_version.cpp
     stb_image.cpp
     stdafx.cpp
@@ -88,6 +87,8 @@ target_sources(rpcs3
     Input/sdl_pad_handler.cpp
     Input/skateboard_pad_handler.cpp
     Input/xinput_pad_handler.cpp
+
+    rpcs3qt/rpcn_countries.cpp
 )
 
 gen_git_version(${CMAKE_CURRENT_SOURCE_DIR})
