Adjusted as per review

--- a/rpcs3/emucore.vcxproj.filters
+++ b/rpcs3/emucore.vcxproj.filters
@@ -1264,7 +1264,9 @@
     <ClCompile Include="Emu\Io\MouseHandler.cpp">
       <Filter>Emu\Io</Filter>
     </ClCompile>
-    <ClCompile Include="rpcs3qt\rpcn_countries.cpp" />
+    <ClCompile Include="Emu\NP\rpcn_countries.cpp">
+      <Filter>Emu\NP</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Crypto\aes.h">
@@ -2570,7 +2572,9 @@
     <ClInclude Include="Emu\CPU\Hypervisor.h">
       <Filter>Emu\CPU</Filter>
     </ClInclude>
-    <ClInclude Include="rpcs3qt\rpcn_countries.h" />
+    <ClInclude Include="Emu\NP\rpcn_countries.h">
+      <Filter>Emu\NP</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Emu\RSX\Program\GLSLSnippets\GPUDeswizzle.glsl">
