--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -27,10 +27,17 @@ if(UNIX AND NOT APPLE)
     if(X11_FOUND)
         add_definitions(-DHAVE_X11)
     endif()
-    find_package(Wayland)
-    if(WAYLAND_FOUND)
-        add_definitions(-DHAVE_WAYLAND)
-        set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} "EGL")
+
+    # Configure wayland if needed. We need both Wayland and EGL libraries
+    if(USE_WAYLAND)
+        find_package(Wayland)
+        find_package(EGL)
+        if(WAYLAND_FOUND AND EGL_FOUND)
+            add_definitions(-DHAVE_WAYLAND)
+            set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} "EGL")
+        else()
+            message(WARNING "Wayland support is disabled because either wayland or EGL development libraries could not be found")
+        endif()
     endif()
 endif()
 
