Link EGL library by target name

--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -34,7 +34,7 @@ if(UNIX AND NOT APPLE)
         find_package(EGL)
         if(WAYLAND_FOUND AND EGL_FOUND)
             add_definitions(-DHAVE_WAYLAND)
-            set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} "EGL")
+            set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} EGL::EGL)
         else()
             message(WARNING "Wayland support is disabled because either wayland or EGL development libraries could not be found")
         endif()
