--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ jobs:
     - bash: |
         chmod +x ".ci/build-mac-arm64.sh"
         chmod +x ".ci/deploy-mac.sh"
-        "arch -arm64 /bin/sh .ci/build-mac-arm64.sh"
+        arch -arm64 /bin/sh -- .ci/build-mac-arm64.sh
       displayName: Build MacOS (ARM64)
 
     - publish: $(Build.ArtifactStagingDirectory)
