--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -166,6 +166,7 @@ jobs:
     - bash: |
         chmod +x ".ci/build-mac.sh"
         chmod +x ".ci/deploy-mac.sh"
+        chmod +x ".ci/optimize-mac.sh"
         ".ci/build-mac.sh"
         chmod +x ".ci/build-mac-arm64.sh"
         chmod +x ".ci/deploy-mac-arm64.sh"
