--- a/rpcs3/rpcs3.vcxproj
+++ b/rpcs3/rpcs3.vcxproj
@@ -1996,16 +1996,22 @@
   <ItemGroup>
     <None Include="..\.cirrus.yml" />
     <None Include="..\.ci\build-freebsd.sh" />
+    <None Include="..\.ci\build-linux-aarch64.sh" />
     <None Include="..\.ci\build-linux.sh" />
+    <None Include="..\.ci\build-mac-arm64.sh" />
     <None Include="..\.ci\build-mac.sh" />
+    <None Include="..\.ci\deploy-linux-legacy.sh" />
     <None Include="..\.ci\deploy-linux.sh" />
+    <None Include="..\.ci\deploy-mac-arm64.sh" />
     <None Include="..\.ci\deploy-mac.sh" />
     <None Include="..\.ci\deploy-windows.sh" />
+    <None Include="..\.ci\docker.env" />
     <None Include="..\.ci\export-azure-vars.sh" />
     <None Include="..\.ci\export-cirrus-vars.sh" />
     <None Include="..\.ci\get_keys-windows.sh" />
     <None Include="..\.ci\github-upload.sh" />
     <None Include="..\.ci\install-freebsd.sh" />
+    <None Include="..\.ci\optimize-mac.sh" />
     <None Include="..\.ci\setup-windows.sh" />
     <None Include="..\azure-pipelines.yml" />
     <None Include="..\bin\GuiConfigs\Classic (Bright).qss" />
