--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -143,14 +143,9 @@ elseif(UNIX)
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/GuiConfigs $<TARGET_FILE_DIR:rpcs3>/GuiConfigs
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/git $<TARGET_FILE_DIR:rpcs3>/git)
 elseif(WIN32)
-    if(MSVC)
-        cmake_policy(SET CMP0026 OLD)
-        get_target_property(OpenAL_LIB_PATH OpenAL::OpenAL LOCATION)
-        if (OpenAL_LIB_PATH)
-            add_custom_command(TARGET rpcs3 POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy ${OpenAL_LIB_PATH} $<TARGET_FILE_DIR:rpcs3>)
-        endif()
-    endif()
+    add_custom_command(TARGET rpcs3 POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:OpenAL::OpenAL> $<TARGET_FILE_DIR:rpcs3>
+    )
     add_custom_command(TARGET rpcs3 POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/Icons $<TARGET_FILE_DIR:rpcs3>/Icons
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/bin/GuiConfigs $<TARGET_FILE_DIR:rpcs3>/GuiConfigs
