--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -344,7 +344,7 @@ add_subdirectory(miniupnp EXCLUDE_FROM_ALL)
 add_subdirectory(rtmidi EXCLUDE_FROM_ALL)
 
 # OPENCV
-# TODO: add library and -DHAVE_OPENCV
+add_subdirectory(opencv EXCLUDE_FROM_ALL)
 
 # add nice ALIAS targets for ease of use
 if(USE_SYSTEM_LIBUSB)
@@ -376,3 +376,4 @@ add_library(3rdparty::soundtouch ALIAS soundtouch)
 add_library(3rdparty::sdl2 ALIAS ${SDL2_TARGET})
 add_library(3rdparty::miniupnpc ALIAS libminiupnpc-static)
 add_library(3rdparty::rtmidi ALIAS rtmidi)
+add_library(3rdparty::opencv ALIAS ${OPENCV_TARGET})
